Setup links in navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="quadrinews">Quadrinews</string>
     <string name="mostra_altro">Mostra altro</string>
     <string name="recenti">Recenti</string>
+    <string name="servizi">Servizi</string>
 </resources>
